--- a/LinConnectClient/app/src/main/res/values/strings.xml
+++ b/LinConnectClient/app/src/main/res/values/strings.xml
@@ -24,8 +24,8 @@
     <string name="pref_refresh">Refresh server list</string>
     <string name="pref_network_scan">Scanning network for servers...</string>
     <string name="cat_bt_device">Step 4.2: Select Bluetooth Device</string>
-    <string name="pref_launch_bt">BT preferences</string>
-    <string name="pref_launch_bt_summary">Click to set bluetooth devices</string>
+    <string name="pref_launch_bt">Bluetooth preferences</string>
+    <string name="pref_launch_bt_summary">Tap here to set bluetooth devices</string>
     <string name="bt_device">None</string>
     <string name="bt_device_summary">Tap here to change Bluetooth device</string>
     <string name="test_bt_device">Test</string>
@@ -47,5 +47,6 @@
 
 
     <string name="header_bluetooth">Paired BT devices</string>
-
+    <string name="service_started">Service started</string>
+    <string name="service_stopped">Service stopped</string>
 </resources>
